service info query test
